Reading objetcs from API

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>API Explorer Web APP</title>
 </head>
 <body>
+    <div class="content" id="content"></div>
     
 </body>
-
-<link rel="stylesheet" href="./assets/">
+<script src="./assets/js/app.js"></script>
 </html>
+
