--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Movie Discover APP</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Quattrocento&display=swap" rel="stylesheet">
+    <title>Movie Discovery APP</title>
 </head>
+
 <body>
-    <div class="content" id="content"></div>
-    
+
+    <div class="content" id="content">
+        <div class="title"><h1>API Movie Discovery</h1></div>
+        <div id="movieContent"></div>
+    </div>
+        
 </body>
 <script src="./assets/js/app.js"></script>
 </html>
